--- a/lib/assets/javascripts/amplify/core.js.erb
+++ b/lib/assets/javascripts/amplify/core.js.erb
@@ -15,6 +15,7 @@ var slice = [].slice,
 var amplify = global.amplify = {
 	publish: function( topic ) {
 		var args = slice.call( arguments, 1 ),
+			topicSubscriptions,
 			subscription,
 			length,
 			i = 0,
@@ -24,8 +25,9 @@ var amplify = global.amplify = {
 			return true;
 		}
 
-		for ( length = subscriptions[ topic ].length; i < length; i++ ) {
-			subscription = subscriptions[ topic ][ i ];
+		topicSubscriptions = subscriptions[ topic ].slice();
+		for ( length = topicSubscriptions.length; i < length; i++ ) {
+			subscription = topicSubscriptions[ i ];
 			ret = subscription.callback.apply( subscription.context, args );
 			if ( ret === false ) {
 				break;
@@ -48,9 +50,11 @@ var amplify = global.amplify = {
 
 		var topicIndex = 0,
 			topics = topic.split( /\s/ ),
-			topicLength = topics.length;
+			topicLength = topics.length,
+			added;
 		for ( ; topicIndex < topicLength; topicIndex++ ) {
 			topic = topics[ topicIndex ];
+			added = false;
 			if ( !subscriptions[ topic ] ) {
 				subscriptions[ topic ] = [];
 			}
@@ -65,11 +69,14 @@ var amplify = global.amplify = {
 			for ( ; i >= 0; i-- ) {
 				if ( subscriptions[ topic ][ i ].priority <= priority ) {
 					subscriptions[ topic ].splice( i + 1, 0, subscriptionInfo );
-					return callback;
+					added = true;
+					break;
 				}
 			}
-	
-			subscriptions[ topic ].unshift( subscriptionInfo );
+
+			if ( !added ) {
+				subscriptions[ topic ].unshift( subscriptionInfo );
+			}
 		}
 
 		return callback;
@@ -93,4 +100,3 @@ var amplify = global.amplify = {
 };
 
 }( this ) );
-
