--- a/lib/assets/javascripts/amplify/request.js.erb
+++ b/lib/assets/javascripts/amplify/request.js.erb
@@ -15,6 +15,24 @@ function isFunction( obj ) {
 	return ({}).toString.call( obj ) === "[object Function]";
 }
 
+function async( fn ) {
+	var isAsync = false;
+	setTimeout(function() {
+		isAsync = true;
+	}, 1 );
+	return function() {
+		var that = this,
+			args = arguments;
+		if ( isAsync ) {
+			fn.apply( that, args );
+		} else {
+			setTimeout(function() {
+				fn.apply( that, args );
+			}, 1 );
+		}
+	};
+}
+
 amplify.request = function( resourceId, data, callback ) {
 	// default to an empty hash just so we can handle a missing resourceId
 	// in one place
@@ -36,18 +54,18 @@ amplify.request = function( resourceId, data, callback ) {
 		resource = amplify.request.resources[ settings.resourceId ],
 		success = settings.success || noop,
 		error = settings.error || noop;
-	settings.success = function( data, status ) {
+	settings.success = async( function( data, status ) {
 		status = status || "success";
 		amplify.publish( "request.success", settings, data, status );
 		amplify.publish( "request.complete", settings, data, status );
 		success( data, status );
-	};
-	settings.error = function( data, status ) {
+	});
+	settings.error = async( function( data, status ) {
 		status = status || "error";
 		amplify.publish( "request.error", settings, data, status );
 		amplify.publish( "request.complete", settings, data, status );
 		error( data, status );
-	};
+	});
 
 	if ( !resource ) {
 		if ( !settings.resourceId ) {
@@ -101,10 +119,8 @@ amplify.request.types.ajax = function( defnSettings ) {
 	return function( settings, request ) {
 		var xhr,
 			url = defnSettings.url,
-			data = settings.data,
 			abort = request.abort,
-			ajaxSettings = {},
-			mappedKeys = [],
+			ajaxSettings = $.extend( true, {}, defnSettings, { data: settings.data } ),
 			aborted = false,
 			ampXHR = {
 				readyState: 0,
@@ -136,27 +152,10 @@ amplify.request.types.ajax = function( defnSettings ) {
 				}
 			};
 
-		if ( typeof data !== "string" ) {
-			data = $.extend( true, {}, defnSettings.data, data );
-			
-			url = url.replace( rurlData, function ( m, key ) {
-				if ( key in data ) {
-				    mappedKeys.push( key );
-				    return data[ key ];
-				}
-			});
-			
-			// We delete the keys later so duplicates are still replaced
-			$.each( mappedKeys, function ( i, key ) {
-				delete data[ key ];
-			});
-		}
+		amplify.publish( "request.ajax.preprocess",
+			defnSettings, settings, ajaxSettings, ampXHR );
 
-		$.extend( ajaxSettings, defnSettings, {
-			url: url,
-			type: defnSettings.type,
-			data: data,
-			dataType: defnSettings.dataType,
+		$.extend( ajaxSettings, {
 			success: function( data, status ) {
 				handleResponse( data, status );
 			},
@@ -209,6 +208,56 @@ amplify.request.types.ajax = function( defnSettings ) {
 		};
 	};
 };
+
+
+
+amplify.subscribe( "request.ajax.preprocess", function( defnSettings, settings, ajaxSettings ) {
+	var mappedKeys = [],
+		data = ajaxSettings.data;
+
+	if ( typeof data === "string" ) {
+		return;
+	}
+
+	data = $.extend( true, {}, defnSettings.data, data );
+
+	ajaxSettings.url = ajaxSettings.url.replace( rurlData, function ( m, key ) {
+		if ( key in data ) {
+		    mappedKeys.push( key );
+		    return data[ key ];
+		}
+	});
+
+	// We delete the keys later so duplicates are still replaced
+	$.each( mappedKeys, function ( i, key ) {
+		delete data[ key ];
+	});
+
+	ajaxSettings.data = data;
+});
+
+
+
+amplify.subscribe( "request.ajax.preprocess", function( defnSettings, settings, ajaxSettings ) {
+	var data = ajaxSettings.data,
+		dataMap = defnSettings.dataMap;
+
+	if ( !dataMap || typeof data === "string" ) {
+		return;
+	}
+
+	if ( $.isFunction( dataMap ) ) {
+		ajaxSettings.data = dataMap( data );
+	} else {
+		$.each( defnSettings.dataMap, function( orig, replace ) {
+			if ( orig in data ) {
+				data[ replace ] = data[ orig ];
+				delete data[ orig ];
+			}
+		});
+		ajaxSettings.data = data;
+	}
+});
 
 
 
@@ -334,4 +383,3 @@ amplify.subscribe( "request.before.ajax", function( resource, settings, ajaxSett
 });
 
 }( amplify, jQuery ) );
-
