Updating code to 1.1.2
Loosening jquery-rails dependency to support Rails 4

--- a/lib/assets/javascripts/amplify/request.js.erb
+++ b/lib/assets/javascripts/amplify/request.js.erb
@@ -1,14 +1,18 @@
 //= require amplify/core
+
 /*!
  * Amplify Request <%= Amplify::VERSION %>
- * 
- * Copyright 2011 appendTo LLC. (http://appendto.com/team)
+ *
+ * Copyright 2011 - 2013 appendTo LLC. (http://appendto.com/team)
  * Dual licensed under the MIT or GPL licenses.
  * http://appendto.com/open-source-licenses
- * 
+ *
  * http://amplifyjs.com
  */
+/*global amplify*/
+
 (function( amplify, undefined ) {
+'use strict';
 
 function noop() {}
 function isFunction( obj ) {
@@ -54,12 +58,14 @@ amplify.request = function( resourceId, data, callback ) {
 		resource = amplify.request.resources[ settings.resourceId ],
 		success = settings.success || noop,
 		error = settings.error || noop;
+
 	settings.success = async( function( data, status ) {
 		status = status || "success";
 		amplify.publish( "request.success", settings, data, status );
 		amplify.publish( "request.complete", settings, data, status );
 		success( data, status );
 	});
+
 	settings.error = async( function( data, status ) {
 		status = status || "error";
 		amplify.publish( "request.error", settings, data, status );
@@ -103,13 +109,11 @@ amplify.request.define = function( resourceId, type, settings ) {
 }( amplify ) );
 
 
-
-
-
 (function( amplify, $, undefined ) {
+'use strict';
 
 var xhrProps = [ "status", "statusText", "responseText", "responseXML", "readyState" ],
-    rurlData = /\{([^\}]+)\}/g;
+		rurlData = /\{([^\}]+)\}/g;
 
 amplify.request.types.ajax = function( defnSettings ) {
 	defnSettings = $.extend({
@@ -117,7 +121,7 @@ amplify.request.types.ajax = function( defnSettings ) {
 	}, defnSettings );
 
 	return function( settings, request ) {
-		var xhr,
+		var xhr, handleResponse,
 			url = defnSettings.url,
 			abort = request.abort,
 			ajaxSettings = $.extend( true, {}, defnSettings, { data: settings.data } ),
@@ -134,7 +138,7 @@ amplify.request.types.ajax = function( defnSettings ) {
 					return xhr.getResponseHeader( key );
 				},
 				overrideMimeType: function( type ) {
-					return xhr.overrideMideType( type );
+					return xhr.overrideMimeType( type );
 				},
 				abort: function() {
 					aborted = true;
@@ -152,28 +156,7 @@ amplify.request.types.ajax = function( defnSettings ) {
 				}
 			};
 
-		amplify.publish( "request.ajax.preprocess",
-			defnSettings, settings, ajaxSettings, ampXHR );
-
-		$.extend( ajaxSettings, {
-			success: function( data, status ) {
-				handleResponse( data, status );
-			},
-			error: function( _xhr, status ) {
-				handleResponse( null, status );
-			},
-			beforeSend: function( _xhr, _ajaxSettings ) {
-				xhr = _xhr;
-				ajaxSettings = _ajaxSettings;
-				var ret = defnSettings.beforeSend ?
-					defnSettings.beforeSend.call( this, ampXHR, ajaxSettings ) : true;
-				return ret && amplify.publish( "request.before.ajax",
-					defnSettings, settings, ajaxSettings, ampXHR );
-			}
-		});
-		$.ajax( ajaxSettings );
-
-		function handleResponse( data, status ) {
+		handleResponse = function( data, status ) {
 			$.each( xhrProps, function( i, key ) {
 				try {
 					ampXHR[ key ] = xhr[ key ];
@@ -200,7 +183,61 @@ amplify.request.types.ajax = function( defnSettings ) {
 			// this can happen if a request is aborted
 			// TODO: figure out if this breaks polling or multi-part responses
 			handleResponse = $.noop;
+		};
+
+		amplify.publish( "request.ajax.preprocess",
+			defnSettings, settings, ajaxSettings, ampXHR );
+
+		$.extend( ajaxSettings, {
+			isJSONP: function () {
+				return (/jsonp/gi).test(this.dataType);
+			},
+			cacheURL: function () {
+				if (!this.isJSONP()) {
+					return this.url;
+				}
+
+				var callbackName = 'callback';
+
+				// possible for the callback function name to be overridden
+				if (this.hasOwnProperty('jsonp')) {
+					if (this.jsonp !== false) {
+						callbackName = this.jsonp;
+					} else {
+						if (this.hasOwnProperty('jsonpCallback')) {
+							callbackName = this.jsonpCallback;
+						}
+					}
+				}
+
+				// search and replace callback parameter in query string with empty string
+				var callbackRegex = new RegExp('&?' + callbackName + '=[^&]*&?', 'gi');
+				return this.url.replace(callbackRegex, '');
+			},
+			success: function( data, status ) {
+				handleResponse( data, status );
+			},
+			error: function( _xhr, status ) {
+				handleResponse( null, status );
+			},
+			beforeSend: function( _xhr, _ajaxSettings ) {
+				xhr = _xhr;
+				ajaxSettings = _ajaxSettings;
+				var ret = defnSettings.beforeSend ?
+					defnSettings.beforeSend.call( this, ampXHR, ajaxSettings ) : true;
+				return ret && amplify.publish( "request.before.ajax",
+					defnSettings, settings, ajaxSettings, ampXHR );
+			}
+		});
+
+		// cache all JSONP requests
+		if (ajaxSettings.cache && ajaxSettings.isJSONP()) {
+			$.extend(ajaxSettings, {
+				cache: true
+			});
 		}
+
+		$.ajax( ajaxSettings );
 
 		request.abort = function() {
 			ampXHR.abort();
@@ -223,8 +260,8 @@ amplify.subscribe( "request.ajax.preprocess", function( defnSettings, settings, 
 
 	ajaxSettings.url = ajaxSettings.url.replace( rurlData, function ( m, key ) {
 		if ( key in data ) {
-		    mappedKeys.push( key );
-		    return data[ key ];
+			mappedKeys.push( key );
+			return data[ key ];
 		}
 	});
 
@@ -265,19 +302,21 @@ var cache = amplify.request.cache = {
 	_key: function( resourceId, url, data ) {
 		data = url + data;
 		var length = data.length,
-			i = 0,
-			checksum = chunk();
+			i = 0;
 
-		while ( i < length ) {
-			checksum ^= chunk();
-		}
-
+		/*jshint bitwise:false*/
 		function chunk() {
 			return data.charCodeAt( i++ ) << 24 |
 				data.charCodeAt( i++ ) << 16 |
 				data.charCodeAt( i++ ) << 8 |
 				data.charCodeAt( i++ ) << 0;
 		}
+
+		var checksum = chunk();
+		while ( i < length ) {
+			checksum ^= chunk();
+		}
+		/*jshint bitwise:true*/
 
 		return "request-" + resourceId + "-" + checksum;
 	},
@@ -287,7 +326,7 @@ var cache = amplify.request.cache = {
 		return function( resource, settings, ajaxSettings, ampXHR ) {
 			// data is already converted to a string by the time we get here
 			var cacheKey = cache._key( settings.resourceId,
-					ajaxSettings.url, ajaxSettings.data ),
+					ajaxSettings.cacheURL(), ajaxSettings.data ),
 				duration = resource.cache;
 
 			if ( cacheKey in memoryStore ) {
@@ -312,7 +351,7 @@ if ( amplify.store ) {
 	$.each( amplify.store.types, function( type ) {
 		cache[ type ] = function( resource, settings, ajaxSettings, ampXHR ) {
 			var cacheKey = cache._key( settings.resourceId,
-					ajaxSettings.url, ajaxSettings.data ),
+					ajaxSettings.cacheURL(), ajaxSettings.data ),
 				cached = amplify.store[ type ]( cacheKey );
 
 			if ( cached ) {
@@ -320,7 +359,7 @@ if ( amplify.store ) {
 				return false;
 			}
 			var success = ampXHR.success;
-			ampXHR.success = function( data ) {	
+			ampXHR.success = function( data ) {
 				amplify.store[ type ]( cacheKey, data, { expires: resource.cache.expires } );
 				success.apply( this, arguments );
 			};
@@ -351,6 +390,8 @@ amplify.request.decoders = {
 		} else if ( data.status === "error" ) {
 			delete data.status;
 			error( data, "error" );
+		} else {
+			error( null, "error" );
 		}
 	}
 };
@@ -358,11 +399,11 @@ amplify.request.decoders = {
 amplify.subscribe( "request.before.ajax", function( resource, settings, ajaxSettings, ampXHR ) {
 	var _success = ampXHR.success,
 		_error = ampXHR.error,
-		decoder = $.isFunction( resource.decoder )
-			? resource.decoder
-			: resource.decoder in amplify.request.decoders
-				? amplify.request.decoders[ resource.decoder ]
-				: amplify.request.decoders._default;
+		decoder = $.isFunction( resource.decoder ) ?
+			resource.decoder :
+			resource.decoder in amplify.request.decoders ?
+				amplify.request.decoders[ resource.decoder ] :
+				amplify.request.decoders._default;
 
 	if ( !decoder ) {
 		return;
