--- a/lib/assets/javascripts/amplify/core.js.erb
+++ b/lib/assets/javascripts/amplify/core.js.erb
@@ -1,10 +1,10 @@
 /*!
  * Amplify Core <%= Amplify::VERSION %>
- * 
- * Copyright 2011 appendTo LLC. (http://appendto.com/team)
+ *
+ * Copyright 2011 - 2013 appendTo LLC. (http://appendto.com/team)
  * Dual licensed under the MIT or GPL licenses.
  * http://appendto.com/open-source-licenses
- * 
+ *
  * http://amplifyjs.com
  */
 (function( global, undefined ) {
@@ -14,6 +14,10 @@ var slice = [].slice,
 
 var amplify = global.amplify = {
 	publish: function( topic ) {
+		if ( typeof topic !== "string" ) {
+			throw new Error( "You must provide a valid topic to publish." );
+		}
+
 		var args = slice.call( arguments, 1 ),
 			topicSubscriptions,
 			subscription,
@@ -37,6 +41,10 @@ var amplify = global.amplify = {
 	},
 
 	subscribe: function( topic, context, callback, priority ) {
+		if ( typeof topic !== "string" ) {
+			throw new Error( "You must provide a valid topic to create a subscription." );
+		}
+
 		if ( arguments.length === 3 && typeof callback === "number" ) {
 			priority = callback;
 			callback = context;
@@ -58,14 +66,14 @@ var amplify = global.amplify = {
 			if ( !subscriptions[ topic ] ) {
 				subscriptions[ topic ] = [];
 			}
-	
+
 			var i = subscriptions[ topic ].length - 1,
 				subscriptionInfo = {
 					callback: callback,
 					context: context,
 					priority: priority
 				};
-	
+
 			for ( ; i >= 0; i-- ) {
 				if ( subscriptions[ topic ][ i ].priority <= priority ) {
 					subscriptions[ topic ].splice( i + 1, 0, subscriptionInfo );
@@ -82,7 +90,16 @@ var amplify = global.amplify = {
 		return callback;
 	},
 
-	unsubscribe: function( topic, callback ) {
+	unsubscribe: function( topic, context, callback ) {
+		if ( typeof topic !== "string" ) {
+			throw new Error( "You must provide a valid topic to remove a subscription." );
+		}
+
+		if ( arguments.length === 2 ) {
+			callback = context;
+			context = null;
+		}
+
 		if ( !subscriptions[ topic ] ) {
 			return;
 		}
@@ -92,8 +109,13 @@ var amplify = global.amplify = {
 
 		for ( ; i < length; i++ ) {
 			if ( subscriptions[ topic ][ i ].callback === callback ) {
-				subscriptions[ topic ].splice( i, 1 );
-				break;
+				if ( !context || subscriptions[ topic ][ i ].context === context ) {
+					subscriptions[ topic ].splice( i, 1 );
+
+					// Adjust counter and length for removed item
+					i--;
+					length--;
+				}
 			}
 		}
 	}
